[project]
name = "scikit-learn"
dynamic = ["version"]
description = "A set of python modules for machine learning and data mining"
readme = "README.rst"
maintainers = [
    {name = "scikit-learn developers", email="scikit-learn@python.org"},
]
dependencies = [
  "numpy>=1.24.1",
  "scipy>=1.10.0",
  "joblib>=1.4.0",
  "narwhals>=2.0.1",
  "threadpoolctl>=3.5.0",
]
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["COPYING"]
classifiers=[
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: C",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Development Status :: 5 - Production/Stable",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
homepage = "https://scikit-learn.org"
source = "https://github.com/scikit-learn/scikit-learn"
download = "https://pypi.org/project/scikit-learn/#files"
tracker = "https://github.com/scikit-learn/scikit-learn/issues"
"release notes" = "https://scikit-learn.org/stable/whats_new"

[project.optional-dependencies]
build = ["numpy>=1.24.1", "scipy>=1.10.0", "cython>=3.1.2", "meson-python>=0.17.1"]
install = ["numpy>=1.24.1", "scipy>=1.10.0", "joblib>=1.4.0", "narwhals>=2.0.1", "threadpoolctl>=3.5.0"]
benchmark = ["matplotlib>=3.6.1", "pandas>=1.5.0", "memory_profiler>=0.57.0"]
docs = [
    "matplotlib>=3.6.1",
    "scikit-image>=0.22.0",
    "pandas>=1.5.0",
    "rich>=14.1.0",
    "seaborn>=0.13.0",
    "memory_profiler>=0.57.0",
    "sphinx>=7.3.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-gallery>=0.17.1",
    "numpydoc>=1.2.0",
    "Pillow>=12.1.1",
    "pooch>=1.8.0",
    "sphinx-prompt>=1.4.0",
    "sphinxext-opengraph>=0.9.1",
    "plotly>=5.22.0",
    "polars>=0.20.30",
    "sphinx-design>=0.6.0",
    "sphinxcontrib-sass>=0.3.4",
    "pydata-sphinx-theme>=0.15.3",
    "sphinx-remove-toctrees>=1.0.0.post1",
    "towncrier>=24.8.0",
]
examples = [
    "matplotlib>=3.6.1",
    "scikit-image>=0.22.0",
    "pandas>=1.5.0",
    "rich>=14.1.0",
    "seaborn>=0.13.0",
    "pooch>=1.8.0",
    "plotly>=5.22.0",
]
tests = [
    "matplotlib>=3.6.1",
    "pandas>=1.5.0",
    "rich>=14.1.0",
    "pytest>=7.1.2",
    "pytest-cov>=2.9.0",
    "ruff>=0.12.2",
    "mypy>=1.15",
    "pyamg>=5.0.0",
    "polars>=0.20.30",
    "pyarrow>=13.0.0",
    "numpydoc>=1.2.0",
    "pooch>=1.8.0",
]
maintenance = ["conda-lock==3.0.1"]

[build-system]
build-backend = "mesonpy"
# Minimum requirements for the build system to execute.
requires = [
    "meson-python>=0.17.1",
    "cython>=3.1.2",
    "numpy>=2",
    "scipy>=1.10.0",
]

# =============================================================================
# pixi configuration
# =============================================================================
# This section defines the conda/PyPI environments used by the CI. Each CI build
# maps to a pixi environment (see ``[tool.pixi.environments]``) which is composed
# of a single "feature" describing its dependencies and target platform. The
# resolved versions are stored in ``pixi.lock`` (a single multi-environment lock
# file that replaces the per-build conda-lock ``*.lock`` files).
#
# The minimum-dependency pins (marked with ``# min``) are generated from
# ``sklearn/_min_dependencies.py`` by ``build_tools/update_pixi_min_pins.py``;
# do not edit them by hand.
#
# scikit-learn itself is intentionally NOT declared as a pixi dependency: the CI
# builds it with ``pip install --no-build-isolation -e .`` on top of the pixi
# environment, exactly like the previous conda-lock based setup.
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

# Default (a.k.a. local development) environment. CI environments all set
# ``no-default-feature = true`` so these dependencies never leak into them.
[tool.pixi.dependencies]
python = "*"
numpy = "*"
scipy = "*"
cython = ">=3.1.2"
meson-python = ">=0.17.1"
ninja = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
matplotlib = "*"
pandas = "*"
rich = "*"
pyamg = "*"
polars = "*"
pyarrow = "*"
pillow = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "<=6.3.0"
coverage = "*"
ruff = "*"
mypy = "*"
cython-lint = "*"
array-api-strict = "*"
pip = "*"
ccache = "*"

# ----------------------------------------------------------------------------
# Linux x86-64 - conda-forge + MKL + PyTorch (main CI build)
# build: pylatest_conda_forge_mkl_linux-64
# ----------------------------------------------------------------------------
[tool.pixi.feature.mkl]
platforms = ["linux-64"]
[tool.pixi.feature.mkl.dependencies]
python = "*"
numpy = "*"
blas = { version = "*", build = "mkl" }
scipy = "*"
cython = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
matplotlib = "*"
pandas = "*"
rich = "*"
pyamg = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "<=6.3.0"
coverage = "*"
pillow = "*"
pip = "*"
ninja = "*"
meson-python = "*"
ccache = "*"
pytorch = "*"
pytorch-cpu = "*"
polars = "*"
pyarrow = "*"
array-api-strict = "*"
scipy-doctest = "*"
pytest-playwright = "*"

# ----------------------------------------------------------------------------
# macOS arm64 - conda-forge + OpenBLAS + PyTorch (main CI build)
# build: pylatest_conda_forge_osx-arm64
# blas pinned to openblas (BLIS has numerical issues, see PR #34162)
# ----------------------------------------------------------------------------
[tool.pixi.feature.osx-arm64]
platforms = ["osx-arm64"]
[tool.pixi.feature.osx-arm64.dependencies]
python = "*"
numpy = "*"
blas = { version = "*", build = "openblas" }
scipy = "*"
cython = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
matplotlib = "*"
pandas = "*"
rich = "*"
pyamg = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "<=6.3.0"
coverage = "*"
pillow = "*"
pip = "*"
ninja = "*"
meson-python = "*"
ccache = "*"
compilers = "*"
llvm-openmp = "*"
pytorch = "*"
pytorch-cpu = "*"
array-api-strict = "*"

# ----------------------------------------------------------------------------
# macOS x86-64 - conda-forge + MKL, build without OpenMP
# build: pylatest_conda_forge_mkl_no_openmp
# ----------------------------------------------------------------------------
[tool.pixi.feature.mkl-no-openmp]
platforms = ["osx-64"]
[tool.pixi.feature.mkl-no-openmp.dependencies]
python = "*"
numpy = "*"
blas = { version = "*", build = "mkl" }
scipy = "*"
cython = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
matplotlib = "*"
pandas = "*"
rich = "*"
pyamg = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "<=6.3.0"
coverage = "*"
pillow = "*"
pip = "*"
ninja = "*"
meson-python = "*"
ccache = "*"

# ----------------------------------------------------------------------------
# Windows x64 - conda-forge + OpenBLAS, Python 3.11
# build: pymin_conda_forge_openblas
# ----------------------------------------------------------------------------
[tool.pixi.feature.win]
platforms = ["win-64"]
[tool.pixi.feature.win.dependencies]
python = "3.11.*"
numpy = "*"
blas = { version = "*", build = "openblas" }
scipy = "*"
cython = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
matplotlib = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "<=6.3.0"
coverage = "*"
pillow = "*"
pip = "*"
ninja = "*"
meson-python = "*"
wheel = "*"

# ----------------------------------------------------------------------------
# Linux aarch64 - conda-forge + OpenBLAS, Python 3.11
# build: pymin_conda_forge_arm
# ----------------------------------------------------------------------------
[tool.pixi.feature.arm]
platforms = ["linux-aarch64"]
[tool.pixi.feature.arm.dependencies]
python = "3.11.*"
numpy = "*"
# Pin to openblas to avoid pulling the libnvpl blas build.
blas = { version = "*", build = "openblas" }
scipy = "*"
cython = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
matplotlib = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "<=6.3.0"
coverage = "*"
pillow = "*"
pip = "*"
ninja = "*"
meson-python = "*"
ccache = "*"

# ----------------------------------------------------------------------------
# Linux x86-64 - conda-forge + OpenBLAS, Python 3.11 (Ubuntu 22.04 build)
# build: pymin_conda_forge_openblas_ubuntu_2204
# ----------------------------------------------------------------------------
[tool.pixi.feature.ubuntu]
platforms = ["linux-64"]
[tool.pixi.feature.ubuntu.dependencies]
python = "3.11.*"
numpy = "*"
blas = { version = "*", build = "openblas" }
scipy = "*"
cython = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
pandas = "*"
rich = "*"
pyamg = "*"
pytest = "*"
pytest-xdist = "*"
pillow = "*"
pip = "*"
ninja = "*"
meson-python = "*"
sphinx = "*"
numpydoc = "*"
ccache = "*"

# ----------------------------------------------------------------------------
# Linux x86-64 - conda-forge + OpenBLAS, minimum supported dependencies
# build: pymin_conda_forge_openblas_min_dependencies
# Pins marked "# min" are generated from sklearn/_min_dependencies.py
# ----------------------------------------------------------------------------
[tool.pixi.feature.min]
platforms = ["linux-64"]
[tool.pixi.feature.min.dependencies]
python = "3.11.*"
numpy = "==1.24.1"  # min
blas = { version = "*", build = "openblas" }
scipy = "==1.10.0"  # min
cython = "==3.1.2"  # min
joblib = "==1.4.0"  # min
narwhals = "==2.0.1"  # min
threadpoolctl = "==3.5.0"  # min
matplotlib = "==3.6.1"  # min
rich = "==14.1.0"  # min
pyamg = "==5.0.0"  # min
pytest = "*"
pytest-xdist = "*"
pytest-cov = "<=6.3.0"
coverage = "*"
pillow = "*"
pip = "*"
ninja = "*"
meson-python = "==0.17.1"  # min
ccache = "*"
polars = "==0.20.30"  # min
pyarrow = "==13.0.0"  # min
[tool.pixi.feature.min.pypi-dependencies]
# TODO: move pandas to conda dependencies when pandas 1.5.1 is the minimum
# supported version.
pandas = "==1.5.0"  # min

# ----------------------------------------------------------------------------
# Linux x86-64 - latest dependencies installed mostly via pip on top of conda
# build: pylatest_pip_openblas_pandas
# ----------------------------------------------------------------------------
[tool.pixi.feature.pip-pandas]
platforms = ["linux-64"]
[tool.pixi.feature.pip-pandas.dependencies]
# TODO: bump python once pyamg ships wheels for 3.14+ on PyPI.
python = "3.13.*"
ccache = "*"
pip = "*"
[tool.pixi.feature.pip-pandas.pypi-dependencies]
numpy = "*"
scipy = "*"
cython = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
matplotlib = "*"
pandas = "*"
rich = "*"
pyamg = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "<=6.3.0"
coverage = "*"
pillow = "*"
ninja = "*"
meson-python = "*"
sphinx = "*"
numpydoc = "*"
lightgbm = "*"
array-api-strict = "*"
scipy-doctest = "*"

# ----------------------------------------------------------------------------
# Linux x86-64 - free-threaded CPython build
# build: pylatest_free_threaded
# ----------------------------------------------------------------------------
[tool.pixi.feature.free-threaded]
platforms = ["linux-64"]
[tool.pixi.feature.free-threaded.dependencies]
python-freethreading = "*"
meson-python = "*"
cython = "*"
numpy = "*"
scipy = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
pytest = "*"
pytest-run-parallel = "*"
ccache = "*"
pip = "*"

# ----------------------------------------------------------------------------
# Linux x86-64 - environment WITHOUT pytest, used to check that scikit-learn's
# estimator checks can be imported and used when pytest is not installed (pytest
# is only a soft dependency for end users).
# build: pytest_soft_dependency (Linux only, see build_tools/github/
# test_pytest_soft_dependency.sh)
# NOTE: pytest (and pytest-xdist/pytest-cov) are intentionally absent here so the
# test runs against a genuine pytest-free environment rather than uninstalling
# pytest at runtime.
# ----------------------------------------------------------------------------
[tool.pixi.feature.pytest-soft-dependency]
platforms = ["linux-64"]
[tool.pixi.feature.pytest-soft-dependency.dependencies]
python = "*"
numpy = "*"
blas = "*"
scipy = "*"
cython = "*"
meson-python = "*"
ninja = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
ccache = "*"
pip = "*"

# ----------------------------------------------------------------------------
# NOTE: the scipy-dev build (numpy/scipy/pandas nightly wheels + git-master
# Cython/joblib/Pillow) is intentionally NOT managed by pixi. Those development
# versions change every day, while pixi.lock is only refreshed weekly, so
# pinning them would mean testing stale "dev" versions and churning the lock.
# That build installs its dependencies at run time instead; see the `scipy-dev`
# job in .github/workflows/unit-tests.yml and the `scipy-dev` branch in
# build_tools/github/install.sh.

# ----------------------------------------------------------------------------
# Linux x86-64 - CUDA / Array API GPU build (label-triggered)
# build: pylatest_conda_forge_cuda_array-api_linux-64
# ----------------------------------------------------------------------------
[tool.pixi.feature.cuda]
platforms = ["linux-64"]
channels = ["rapidsai", "conda-forge"]
[tool.pixi.feature.cuda.system-requirements]
cuda = "12"
[tool.pixi.feature.cuda.dependencies]
python = "*"
numpy = "*"
blas = "*"
scipy = "*"
cython = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
matplotlib = "*"
pandas = "*"
rich = "*"
pyamg = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "<=6.3.0"
coverage = "*"
pillow = "*"
pip = "*"
ninja = "*"
meson-python = "*"
ccache = "*"
pytorch-gpu = "*"
polars = "*"
pyarrow = "*"
cupy = "*"
# cuvs is needed for cupyx.scipy.spatial.distance.cdist and friends
cuvs = "*"
array-api-strict = "*"
scipy-doctest = "*"

# ----------------------------------------------------------------------------
# Documentation build - latest dependencies, Python 3.14
# build: doc
# ----------------------------------------------------------------------------
[tool.pixi.feature.doc]
platforms = ["linux-64"]
[tool.pixi.feature.doc.dependencies]
python = "3.14.*"
numpy = "*"
blas = "*"
scipy = "*"
cython = "*"
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
matplotlib = "*"
pandas = "*"
rich = "*"
pyamg = "*"
pytest = "*"
pytest-xdist = "*"
pillow = "*"
pip = "*"
ninja = "*"
meson-python = "*"
scikit-image = "*"
seaborn = "*"
memory_profiler = "*"
compilers = "*"
sphinx = "*"
sphinx-gallery = "*"
sphinx-copybutton = "*"
numpydoc = "*"
sphinx-prompt = "*"
plotly = "*"
polars = "*"
pooch = "*"
sphinxext-opengraph = "*"
sphinx-remove-toctrees = "*"
sphinx-design = "*"
pydata-sphinx-theme = "*"
towncrier = "*"
jupyterlite-sphinx = "*"
jupyterlite-pyodide-kernel = "*"
[tool.pixi.feature.doc.pypi-dependencies]
sphinxcontrib-sass = "*"

# ----------------------------------------------------------------------------
# Documentation build - minimum supported dependencies, Python 3.11
# build: doc_min_dependencies
# Pins marked "# min" are generated from sklearn/_min_dependencies.py
# ----------------------------------------------------------------------------
[tool.pixi.feature.doc-min]
platforms = ["linux-64"]
[tool.pixi.feature.doc-min.dependencies]
python = "3.11.*"
numpy = "==1.24.1"  # min
blas = "*"
scipy = "==1.10.0"  # min
cython = "==3.1.2"  # min
joblib = "*"
narwhals = "*"
threadpoolctl = "*"
matplotlib = "==3.6.1"  # min
# pandas 1.5.0 (the documented minimum) has no conda-forge build for Python
# 3.11, and conda-forge packages here (e.g. seaborn) pull in pandas, so unlike
# the dedicated `min` environment we cannot install 1.5.0 from PyPI on top.
# 1.5.1 is the lowest conda-forge build compatible with Python 3.11. This pin is
# intentionally NOT auto-generated from _min_dependencies.py.
pandas = "==1.5.1"
rich = "==14.1.0"  # min
pyamg = "==5.0.0"  # min
pytest = "*"
pytest-xdist = "*"
pillow = "*"
pip = "*"
ninja = "*"
meson-python = "*"
scikit-image = "==0.22.0"  # min
seaborn = "*"
memory_profiler = "*"
compilers = "*"
sphinx = "==7.3.7"  # min
sphinx-gallery = "==0.17.1"  # min
sphinx-copybutton = "==0.5.2"  # min
numpydoc = "==1.2.0"  # min
sphinx-prompt = "==1.4.0"  # min
plotly = "==5.22.0"  # min
polars = "==0.20.30"  # min
pooch = "==1.8.0"  # min
sphinxext-opengraph = "==0.9.1"  # min
sphinx-remove-toctrees = "==1.0.0.post1"  # min
sphinx-design = "==0.6.0"  # min
pydata-sphinx-theme = "==0.15.3"  # min
towncrier = "==24.8.0"  # min
[tool.pixi.feature.doc-min.pypi-dependencies]
sphinxcontrib-sass = "==0.3.4"  # min

# ----------------------------------------------------------------------------
# Environments: one per CI build. ``no-default-feature`` keeps the development
# dependencies (the default feature) out of the CI environments.
# ----------------------------------------------------------------------------
[tool.pixi.environments]
mkl = { features = ["mkl"], no-default-feature = true }
osx-arm64 = { features = ["osx-arm64"], no-default-feature = true }
mkl-no-openmp = { features = ["mkl-no-openmp"], no-default-feature = true }
win = { features = ["win"], no-default-feature = true }
arm = { features = ["arm"], no-default-feature = true }
ubuntu = { features = ["ubuntu"], no-default-feature = true }
min = { features = ["min"], no-default-feature = true }
pip-pandas = { features = ["pip-pandas"], no-default-feature = true }
free-threaded = { features = ["free-threaded"], no-default-feature = true }
pytest-soft-dependency = { features = ["pytest-soft-dependency"], no-default-feature = true }
cuda = { features = ["cuda"], no-default-feature = true }
doc = { features = ["doc"], no-default-feature = true }
doc-min = { features = ["doc-min"], no-default-feature = true }

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
testpaths = "sklearn"
addopts = [
    "--disable-pytest-warnings",
    "--color=yes",
    "--import-mode=importlib",
]
# Used by pytest-run-parallel when testing thread-safety (with or without GIL).
thread_unsafe_fixtures = [
  "hide_available_pandas",  # relies on monkeypatching
  "tmp_path",  # does not isolate temporary directories across threads
  "pyplot",  # some tests might mutate some shared state of pyplot.
]
# 10 min timeout per test: in case of timeout, dump the tracebacks of all
# threads and terminate the whole test session if a test hangs for more than 10
# min (likely due to a deadlock).
# The second option requires pytest 9.0+ to be active.
faulthandler_timeout = 600
faulthandler_exit_on_timeout = true


[tool.ruff]
line-length = 88
exclude=[
    ".eggs",
    ".git",
    ".mypy_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
    "sklearn/externals",
    "doc/_build",
    "doc/auto_examples",
    "asv_benchmarks/env",
    "asv_benchmarks/html",
    "asv_benchmarks/results",
    "asv_benchmarks/benchmarks/cache",
]

[tool.ruff.lint]
# This enables us to use CPY001: copyright header check
preview = true
# This enables us to use the explicit preview rules that we want only
explicit-preview-rules = true
# all rules can be found here: https://docs.astral.sh/ruff/rules/
extend-select = ["E501", "W", "I", "CPY001", "PGH", "RUF", "TID252"]
ignore=[
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
    # E721 gives many false positives.
    # Use `is` and `is not` for type comparisons, or `isinstance()` for
    # isinstance checks
    "E721",
    # We don't care much about F841.
    # Local variable ... is assigned to but never used
    "F841",
    # some RUF rules trigger too many changes
    "RUF002",
    "RUF003",
    "RUF005",
    "RUF012",
    "RUF015",
    "RUF021",
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "\\#\\ Authors:\\ The\\ scikit\\-learn\\ developers\\\r?\\\n\\#\\ SPDX\\-License\\-Identifier:\\ BSD\\-3\\-Clause"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# It's fine not to put the import at the top of the file in the examples
# folder.
"examples/*"=["E402"]
"doc/conf.py"=["E402"]
"**/tests/*"=["CPY001"]
"asv_benchmarks/*"=["CPY001", "TID252"]
"benchmarks/*"=["CPY001"]
"doc/*"=["CPY001"]
"build_tools/*"=["CPY001"]
"sklearn/_build_utils/*"=["CPY001"]
"maint_tools/*"=["CPY001"]
".spin/*"=["CPY001"]
".github/*"=["CPY001"]
# __doc__ is too long (>4096 chars) and therefore false positive on copyright check
"examples/model_selection/plot_precision_recall.py"=["CPY001"]
"examples/svm/plot_rbf_parameters.py"=["CPY001"]
# __all__ has un-imported names
"sklearn/__init__.py"=["F822"]
"sklearn/utils/_metadata_requests.py"=["CPY001"]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
exclude = "^sklearn/externals"

[[tool.mypy.overrides]]
module = ["joblib.*", "sklearn.externals.*"]
follow_imports = "skip"

[tool.cython-lint]
# Ignore the same error codes as ruff
# + E501 (line too long) because keeping it < 88 in cython
# often makes code less readable.
ignore = [
    # multiple spaces/tab after comma
    'E24',
    # line too long
    'E501',
    # do not assign a lambda expression, use a def
    'E731',
    # do not use variables named 'l', 'O', or 'I'
    'E741',
    # line break before binary operator
    'W503',
    # line break after binary operator
    'W504',
]
# Exclude files are generated from tempita templates
exclude= '''
(
    asv_benchmarks/
  | sklearn/_loss/_loss.pyx
  | sklearn/linear_model/_sag_fast.pyx
  | sklearn/linear_model/_sgd_fast.pyx
  | sklearn/utils/_seq_dataset.pyx
  | sklearn/utils/_seq_dataset.pxd
  | sklearn/utils/_weight_vector.pyx
  | sklearn/utils/_weight_vector.pxd
  | sklearn/metrics/_dist_metrics.pyx
  | sklearn/metrics/_dist_metrics.pxd
  | sklearn/metrics/_pairwise_distances_reduction/_argkmin.pxd
  | sklearn/metrics/_pairwise_distances_reduction/_argkmin.pyx
  | sklearn/metrics/_pairwise_distances_reduction/_argkmin_classmode.pyx
  | sklearn/metrics/_pairwise_distances_reduction/_base.pxd
  | sklearn/metrics/_pairwise_distances_reduction/_base.pyx
  | sklearn/metrics/_pairwise_distances_reduction/_datasets_pair.pxd
  | sklearn/metrics/_pairwise_distances_reduction/_datasets_pair.pyx
  | sklearn/metrics/_pairwise_distances_reduction/_middle_term_computer.pxd
  | sklearn/metrics/_pairwise_distances_reduction/_middle_term_computer.pyx
  | sklearn/metrics/_pairwise_distances_reduction/_radius_neighbors.pxd
  | sklearn/metrics/_pairwise_distances_reduction/_radius_neighbors.pyx
)
'''

[tool.check-sdist]
# These settings should match .gitattributes
sdist-only = []
git-only = [".*", "asv_benchmarks", "benchmarks", "build_tools", "maint_tools"]
default-ignore = false

[tool.spin]
package = "sklearn"  # name of your package

[tool.spin.commands]
"Build" = [
  "spin.cmds.pip.install",
  "spin.cmds.meson.test",
  ".spin/cmds.py:clean",
]
"Documentation" = [
  "spin.cmds.meson.docs"
]

[tool.changelog-bot]
    [tool.changelog-bot.towncrier_changelog]
        enabled = true
        verify_pr_number = true
        changelog_noop_label = "No Changelog Needed"
        whatsnew_pattern = 'doc/whatsnew/upcoming_changes/[^/]+/\d+\.[^.]+\.rst'

[tool.codespell]
skip = ["./.git", "*.svg", "./.mypy_cache", "*sklearn/feature_extraction/_stop_words.py", "*sklearn/feature_extraction/tests/test_text.py", "./doc/_build", "./doc/auto_examples", "./doc/modules/generated"]
ignore-words = "build_tools/codespell_ignore_words.txt"

[tool.towncrier]
    package = "sklearn"
    filename = "doc/whats_new/v1.10.rst"
    single_file = true
    directory = "doc/whats_new/upcoming_changes"
    issue_format = ":pr:`{issue}`"
    template = "doc/whats_new/upcoming_changes/towncrier_template.rst.jinja2"
    all_bullets = false

    [[tool.towncrier.type]]
        directory = "major-feature"
        name = "|MajorFeature|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "feature"
        name = "|Feature|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "efficiency"
        name = "|Efficiency|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "enhancement"
        name = "|Enhancement|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "fix"
        name = "|Fix|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "api"
        name = "|API|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "other"
        name = ""
        showcontent = true

    [[tool.towncrier.section]]
        name = "Security"
        path = "security"

    [[tool.towncrier.section]]
        name = "Changed models"
        path = "changed-models"

    [[tool.towncrier.section]]
        name = "Changes impacting many modules"
        path = "many-modules"

    [[tool.towncrier.section]]
        name = "Support for Array API"
        path = "array-api"

    [[tool.towncrier.section]]
        name = "Metadata routing"
        path = "metadata-routing"

    [[tool.towncrier.section]]
        name = "Callbacks"
        path = "callback"

    [[tool.towncrier.section]]
        name = "custom-top-level"
        path = "custom-top-level"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.base`"
        path = "sklearn.base"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.calibration`"
        path = "sklearn.calibration"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.cluster`"
        path = "sklearn.cluster"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.compose`"
        path = "sklearn.compose"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.covariance`"
        path = "sklearn.covariance"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.cross_decomposition`"
        path = "sklearn.cross_decomposition"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.datasets`"
        path = "sklearn.datasets"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.decomposition`"
        path = "sklearn.decomposition"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.discriminant_analysis`"
        path = "sklearn.discriminant_analysis"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.dummy`"
        path = "sklearn.dummy"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.ensemble`"
        path = "sklearn.ensemble"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.exceptions`"
        path = "sklearn.exceptions"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.feature_extraction`"
        path = "sklearn.feature_extraction"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.feature_selection`"
        path = "sklearn.feature_selection"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.frozen`"
        path = "sklearn.frozen"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.gaussian_process`"
        path = "sklearn.gaussian_process"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.impute`"
        path = "sklearn.impute"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.inspection`"
        path = "sklearn.inspection"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.isotonic`"
        path = "sklearn.isotonic"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.kernel_approximation`"
        path = "sklearn.kernel_approximation"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.kernel_ridge`"
        path = "sklearn.kernel_ridge"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.linear_model`"
        path = "sklearn.linear_model"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.manifold`"
        path = "sklearn.manifold"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.metrics`"
        path = "sklearn.metrics"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.mixture`"
        path = "sklearn.mixture"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.model_selection`"
        path = "sklearn.model_selection"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.multiclass`"
        path = "sklearn.multiclass"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.multioutput`"
        path = "sklearn.multioutput"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.naive_bayes`"
        path = "sklearn.naive_bayes"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.neighbors`"
        path = "sklearn.neighbors"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.neural_network`"
        path = "sklearn.neural_network"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.pipeline`"
        path = "sklearn.pipeline"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.preprocessing`"
        path = "sklearn.preprocessing"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.random_projection`"
        path = "sklearn.random_projection"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.semi_supervised`"
        path = "sklearn.semi_supervised"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.svm`"
        path = "sklearn.svm"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.tree`"
        path = "sklearn.tree"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn.utils`"
        path = "sklearn.utils"
