[options]
packages = find:

[options.packages.find]
include = sklearn*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = sklearn
addopts =
    --disable-pytest-warnings
    --color=yes
