[options]
packages = find:

[options.packages.find]
include = sklearn*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = sklearn
addopts =
    --disable-pytest-warnings
    --color=yes

[mypy]
ignore_missing_imports = True
allow_redefinition = True
exclude=
    sklearn/externals

[mypy-joblib.*]
follow_imports = skip

[codespell]
skip = ./.git,./.mypy_cache,./sklearn/feature_extraction/_stop_words.py,./doc/_build,./doc/auto_examples,./doc/modules/generated,.mailmap,ml_map.svg,setup.cfg
ignore-words = build_tools/codespell_ignore_words.txt
# some case sensitive names and portions of url etc
ignore-regex = \b(Achin|John Cant|Heping|Lamas|Staps|Theis|Wil|bu.edu)\b|\(mis\)fit\b
